--- a/src/style_teste.css
+++ b/src/style_teste.css
@@ -19,12 +19,13 @@ html {
 }
 
 header {
-	background-color: var(--medium);
+	background-color: var(--yellowGreen);
 	display: flex;
 	flex-direction: column;
 	width: 100%;
 	height: 20%;
 	position: sticky;
+	box-shadow: 5px 5px 10px var(--yellowGreen);
 }
 
 header nav {
@@ -65,7 +66,7 @@ header #menu_contato {
 }
 
 header #categorias {
-	background-color: var(--flax);
+	background-color: var(--yellowGreen);
 	width: 10%;
 	align-items: center;
 }
@@ -84,7 +85,7 @@ header #categorias {
 }
 
 #menu-categorias {
-	background-color: var(--apricot);
+	background-color: var(--flax);
 	top: 10%;
 	width: 10%;
 	height: 100%;
@@ -104,7 +105,7 @@ header #categorias {
 }
 
 main {
-	background-color: var(--apricot);
+	background-color: var(--flax);
 	display: flex;
 	justify-content: row;
 	width: 100%;
@@ -114,7 +115,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	background-color: var(--fundo);
+	background-color: var(--medium);
 	width: 90%;
 	padding: 20px;
 }
@@ -131,8 +132,8 @@ main {
 
 .content figure:hover {
 	height: auto;
-	transform: scale(1.2);
-	background-color: rgb(255, 255, 255);
+	transform: scale(1.1);
+	background-color: var(--medium);
 	color: #000000;
 	z-index: 100;
 	border: 3px solid var(--liver);
@@ -159,6 +160,7 @@ main {
 	border: 3px solid var(--liver);
 	margin: 15px 0px;
 	border-radius: 15px;
+	box-shadow: 3px 3px 10px var(--liver)
 }
 
 #carnes_title {
@@ -178,10 +180,10 @@ main {
 main figure {
 	text-align: center;
 	z-index: 0;
-	background-color: var(--fundo);
+	background-color: var(--medium);
 	transform: scale(1);
 	transition-property: height, transform, z-index, background-color, color, border;
-	transition-duration: 500ms;
+	transition-duration: 300ms;
 	transition-timing-function: linear;
 }
 
@@ -214,6 +216,7 @@ span {
 	color: var(--liver);
 	align-items: center;
 	padding: 20px;
+	box-shadow: 3px 3px 10px var(--liver);
 }
 
 #formulario form label {
@@ -238,6 +241,7 @@ textarea {
 	margin: 5px 0px;
 	border: 0px;
 	border: 1px solid var(--liver);
+	box-shadow: 3px 3px var(--liver)
 }
 
 input {
@@ -267,7 +271,7 @@ footer {
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
-	background-color: #dcdcdc;
+	background-color: var(--yellowGreen);
 	width: 100%;
 	height: 200px;
 }
